change github action config

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,9 +21,6 @@ jobs:
         with:
           tag_name: ${{ github.ref }}
           release_name: Релиз ${{ github.ref }}
-          body: |
-            Changes in this Release
-            - First Change
-            - Second Change
+          body: ${{ github.event.commits[0].message }}
           draft: false
           prerelease: false
