--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -2,8 +2,9 @@ name: Release Drafter
 
 on:
   push:
-    tags:
-      - 'v*'
+    # branches to consider in the event; optional, defaults to all
+    branches:
+      - master
 
 jobs:
   update_release_draft:
@@ -11,8 +12,8 @@ jobs:
     steps:
       # Drafts your next Release notes as Pull Requests are merged into "master"
       - uses: release-drafter/release-drafter@v5
-        # with:
+        with:
           # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
-          # config-name: release-template.yml
+          # config-name: my-config.yml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
