GINF-123: tesstovii GINF

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,6 +1,9 @@
 name-template: 'v$NEXT_PATCH_VERSION 🌈'
 tag-template: 'v$NEXT_PATCH_VERSION'
-change-template: '- $TITLE @$AUTHOR'
+replacers:
+  - search: '/(^GINF-\d*)/g'
+    replace: '[$1](https://jira.csssr.io/browse/$1)'
+change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 template: |
   ## Changes
 
