--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,7 +1,7 @@
 name-template: 'v$NEXT_PATCH_VERSION 🌈'
 tag-template: 'v$NEXT_PATCH_VERSION'
 replacers:
-  - search: '/(^GINF-\d*)/g'
+  - search: '/(GINF-\d*)/g'
     replace: '[$1](https://jira.csssr.io/browse/$1)'
 change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 template: |
