--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -3,8 +3,8 @@ tag-template: 'v$NEXT_PATCH_VERSION'
 replacers:
   - search: '/(GINF-\d*)/g'
     replace: '[$1](https://jira.csssr.io/browse/$1)'
-change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
+change-template: '- $TITLE (#$NUMBER) @$AUTHOR'
 template: |
-  ## Changes
+  ## Изменения
 
   $CHANGES
