--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -3,7 +3,7 @@ tag-template: 'v$NEXT_PATCH_VERSION'
 replacers:
   - search: '/(GINF-\d*)/g'
     replace: '[$1](https://jira.csssr.io/browse/$1)'
-change-template: '- $TITLE (#$NUMBER) @$AUTHOR'
+change-template: '- $TITLE (#$NUMBER)'
 template: |
   ## Изменения
 
