--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,11 +14,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@master
-      - name: Create Release Notes
-        uses: docker://decathlon/release-notes-generator-action:2.0.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OUTPUT_FOLDER: temp_release_notes
+      # - name: Create Release Notes
+      #   uses: docker://decathlon/release-notes-generator-action:2.0.0
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     OUTPUT_FOLDER: temp_release_notes
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
