--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,10 +3,8 @@ name: Release
 on:
   push:
     # branches to consider in the event; optional, defaults to all
-    # tags:
-    #   - 'v*'
-    branches:
-      - master
+    tags:
+      - 'v*'
 
 jobs:
   update_release_draft:
