--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,5 +1,5 @@
-name-template: '$NEXT_PATCH_VERSION'	
-tag-template: '$NEXT_PATCH_VERSION'	
+name-template: 'v$NEXT_PATCH_VERSION'	
+tag-template: 'v$NEXT_PATCH_VERSION'	
 replacers:	
   - search: '/(GINF-\d*)/g'	
     replace: '[$1](https://jira.csssr.io/browse/$1)'	
