--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,22 +3,22 @@ name: Release
 on:
   push:
     # branches to consider in the event; optional, defaults to all
-    # tags:
-    #   - 'v*'
-    branches:
-      - master
+    tags:
+      - 'v*'
+    # branches:
+    #   - master
 
 jobs:
   update_release_draft:
     runs-on: ubuntu-latest
     steps:
-      # - name: Checkout
-      #   uses: actions/checkout@master
       - uses: release-drafter/release-drafter@v5
         with:
           config-name: release-drafter.yml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@master
       # - uses: ncipollo/release-action@v1
       #   with:
       #     token: ${{ secrets.GITHUB_TOKEN }}
