--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,11 +7,12 @@ on:
       - 'v*'
 
 jobs:
-  release:
+  update_release_draft:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@master
-      - uses: ncipollo/release-action@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
