--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -1,17 +1,17 @@
-name: Release Drafter
+# name: Release Drafter
 
-on:
-  push:
-    # branches to consider in the event; optional, defaults to all
-    branches:
-      - master
+# on:
+#   push:
+#     # branches to consider in the event; optional, defaults to all
+#     branches:
+#       - master
 
-jobs:
-  update_release_draft:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: release-drafter/release-drafter@v5
-        with:
-          config-name: release-drafter.yml
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+# jobs:
+#   update_release_draft:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: release-drafter/release-drafter@v5
+#         with:
+#           config-name: release-drafter.yml
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
