--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,5 +13,8 @@ jobs:
     - uses: actions/checkout@v1
     - uses: ncipollo/release-action@v1
       with:
+        draft: true
+        body: |
+          ### Тестовый тестович
         token: ${{ secrets.GITHUB_TOKEN }}
 
