--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,4 +17,7 @@ jobs:
         body: |
           ### Тестовый тестович
         token: ${{ secrets.GITHUB_TOKEN }}
+    - uses: ncipollo/release-action@v1
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
 
