--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,6 @@ name: Release
 
 on:
   push:
-    # branches to consider in the event; optional, defaults to all
     tags:
       - 'v*'
 
@@ -10,14 +9,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
-    - name: install github-release-notes and generate changelog
+    - name: Checkout branch
+      uses: actions/checkout@v1
+    - name: Install github-release-notes and generate changelog
       run: |
         npm install github-release-notes
         ./node_modules/.bin/gren changelog --generate --override --token=${{ secrets.GITHUB_TOKEN }}
       env:
         CI: true
-    - uses: ncipollo/release-action@v1
+    - name: Create and publish realese
+      uses: ncipollo/release-action@v1
       with:
         bodyFile: 'CHANGELOG.md'
         token: ${{ secrets.GITHUB_TOKEN }}
