--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,13 +13,12 @@ jobs:
       uses: actions/checkout@v1
     - name: Install github-release-notes and generate changelog
       run: |
-        npm install github-release-notes
-        ./node_modules/.bin/gren changelog --generate --override --token=${{ secrets.GITHUB_TOKEN }}
+        npx github-release-notes changelog --generate --override --token=${{ secrets.GITHUB_TOKEN }} --changelog-filename=TEMP_CHANGELOG.md
       env:
         CI: true
     - name: Create and publish realese
       uses: ncipollo/release-action@v1
       with:
-        bodyFile: 'CHANGELOG.md'
+        bodyFile: 'TEMP_CHANGELOG.md'
         token: ${{ secrets.GITHUB_TOKEN }}
 
