GDC-666: проверка конфига 2

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
     - name: Checkout branch
       uses: actions/checkout@v1
+    - name: Debug
+      run:
+        echo TEMP_CHANGELOG.md
     - name: Install github-release-notes and generate changelog
       run: |
         npx github-release-notes changelog --generate --override --token=${{ secrets.GITHUB_TOKEN }} --changelog-filename=TEMP_CHANGELOG.md
@@ -21,4 +24,7 @@ jobs:
       with:
         bodyFile: 'TEMP_CHANGELOG.md'
         token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Debug
+      run:
+        echo TEMP_CHANGELOG.md
 
