--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ jobs:
         echo TEMP_CHANGELOG.md
     - name: Install github-release-notes and generate changelog
       run: |
+        npm install
         ./github-release-notes/bin/gren.js changelog --generate --override --token=${{ secrets.GITHUB_TOKEN }} --changelog-filename=TEMP_CHANGELOG.md
       env:
         CI: true
