--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,15 +17,15 @@ jobs:
     - name: Install github-release-notes and generate changelog
       run: |
         npm install
-        ./node_modules/.bin/gren changelog --generate --override --token=${{ secrets.GITHUB_TOKEN }} --changelog-filename=TEMP_CHANGELOG.md
+        ./node_modules/.bin/gren release --token=${{ secrets.GITHUB_TOKEN }}
       env:
         CI: true
-    - name: Create and publish realese
-      uses: ncipollo/release-action@v1
-      with:
-        bodyFile: 'TEMP_CHANGELOG.md'
-        token: ${{ secrets.GITHUB_TOKEN }}
-    - name: Debug
-      run:
-        echo TEMP_CHANGELOG.md
+    # - name: Create and publish realese
+    #   uses: ncipollo/release-action@v1
+    #   with:
+    #     bodyFile: 'TEMP_CHANGELOG.md'
+    #     token: ${{ secrets.GITHUB_TOKEN }}
+    # - name: Debug
+    #   run:
+    #     echo TEMP_CHANGELOG.md
 
