--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,8 +16,7 @@ jobs:
         echo TEMP_CHANGELOG.md
     - name: Install github-release-notes and generate changelog
       run: |
-        npm install
-        ./node_modules/.bin/gren release --token=${{ secrets.GITHUB_TOKEN }}
+        npx github-release-notes gren release --tags=v$(node -p -e "require('./package.json').version") --token=94d4a3f57877a23c07bb30b7a5620cdca0e38667
       env:
         CI: true
     # - name: Create and publish realese
