GDC-777: NU TI OHUEL VOOBSHE

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,9 +17,7 @@ jobs:
     - name: Install github-release-notes and generate changelog
       run: |
         echo $(node -p -e "require('./package.json').version")
-        npx github-release-notes release --tags=v$(node -p -e "require('./package.json').version") --token=${{ secrets.GITHUB_TOKEN }}
-      env:
-        CI: true
+        npx github-release-notes release --tags=v$(node -p -e "require('./package.json').version") --token=${{ secrets.GITHUB_TOKEN }} -B
     # - name: Create and publish realese
     #   uses: ncipollo/release-action@v1
     #   with:
