--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,12 +19,12 @@ jobs:
         curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -i https://api.github.com/repos/evless/test-github-actions/tags
         echo $(node -p -e "require('./package.json').version")
         npx github-release-notes changelog -u evless -r test-github-actions --generate --override --token=${{ secrets.GITHUB_TOKEN }} --changelog-filename=TEMP_CHANGELOG.md -B
-    # - name: Create and publish realese
-    #   uses: ncipollo/release-action@v1
-    #   with:
-    #     bodyFile: 'TEMP_CHANGELOG.md'
-    #     token: ${{ secrets.GITHUB_TOKEN }}
-    # - name: Debug
-    #   run:
-    #     echo TEMP_CHANGELOG.md
+    - name: Create and publish realese
+      uses: ncipollo/release-action@v1
+      with:
+        bodyFile: 'TEMP_CHANGELOG.md'
+        token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Debug
+      run:
+        echo TEMP_CHANGELOG.md
 
