--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,8 @@ jobs:
       run: |
         curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -i https://api.github.com/repos/evless/test-github-actions/tags
         echo $(node -p -e "require('./package.json').version")
-        npx github-release-notes changelog --tags=v$(node -p -e "require('./package.json').version") -u evless -r test-github-actions --generate --override --token=${{ secrets.GITHUB_TOKEN }} --changelog-filename=TEMP_CHANGELOG.md -B
+        npm install github-release-notes@1.17.1
+        ./node_modules/.bin/gren changelog -u evless -r test-github-actions --generate --override --token=${{ secrets.GITHUB_TOKEN }} --changelog-filename=TEMP_CHANGELOG.md -B
     - name: Create and publish realese
       uses: ncipollo/release-action@v1
       with:
