--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
         curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" -i https://api.github.com/repos/evless/test-github-actions/tags
         echo $(node -p -e "require('./package.json').version")
         npm install github-release-notes@0.17.1
-        ./node_modules/.bin/gren changelog -u evless -r test-github-actions --generate --override --token=${{ secrets.GITHUB_TOKEN }} --changelog-filename=TEMP_CHANGELOG.md -B
+        ./node_modules/.bin/gren changelog --generate --override --token=${{ secrets.GITHUB_TOKEN }} --changelog-filename=TEMP_CHANGELOG.md -B
     - name: Create and publish realese
       uses: ncipollo/release-action@v1
       with:
